feat: delete api
